Oid  redirect url issue